<?xml version="1.0"?>
<package format="2">
  <name>irsl_ros_control_shm</name>
  <version>0.0.0</version>
  <description>ROS node</description>
  <maintainer email="kakiuchi.yohei.sw@tut.jp">YoheiKakiuchi</maintainer>
  <license>MIT</license>
  <author email="kakiuchi.yohei.sw@tut.jp">YoheiKakiuchi</author>
  <!-- <url type="website"></url> -->
  <!-- <url type="repository"></url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <!--depend>pluginlib</depend-->
  <depend>angles</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>joint_limits_interface</depend>
  <depend>transmission_interface</depend>
  <depend>urdf</depend>

  <depend>joint_state_controller</depend>
  <depend>joint_trajectory_controller</depend>

  <depend>irsl_shm_libs</depend>
  <depend>irsl_realtime_utils</depend>
  <depend>irsl_common_utils</depend>
  <export>
    <!--<build_type>cmake</build_type>-->
    <!--<general_ros_control plugin="${prefix}/plugins.xml" />-->
  </export>
</package>
